[gd_scene load_steps=3 format=3 uid="uid://ddaw2uyxii5q5"]

[ext_resource type="Script" path="res://scenes/terminal/d_hsla_display.gd" id="1_6cr8r"]
[ext_resource type="PackedScene" uid="uid://dusxqqeviocxc" path="res://scenes/terminal/windows/graphs/bar.tscn" id="1_khg14"]

[node name="dHSLADisplay" type="GridContainer"]
size_flags_horizontal = 4
theme_override_constants/h_separation = 8
columns = 4
script = ExtResource("1_6cr8r")

[node name="hLbl" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.501961, 0.501961, 1)
text = "-50"
horizontal_alignment = 1

[node name="sLbl" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.501961, 0.501961, 1)
text = "-50"
horizontal_alignment = 1

[node name="lLbl" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.501961, 0.501961, 1)
text = "-50"
horizontal_alignment = 1

[node name="aLbl" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.941176, 0.501961, 0.501961, 1)
text = "-50"
horizontal_alignment = 1

[node name="hBar" parent="." instance=ExtResource("1_khg14")]
unique_name_in_owner = true
layout_mode = 2

[node name="sBar" parent="." instance=ExtResource("1_khg14")]
unique_name_in_owner = true
layout_mode = 2
title = "S"

[node name="lBar" parent="." instance=ExtResource("1_khg14")]
unique_name_in_owner = true
layout_mode = 2
title = "L"

[node name="aBar" parent="." instance=ExtResource("1_khg14")]
unique_name_in_owner = true
layout_mode = 2
title = "A"
